Added Start-007 contract.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereLow.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereLow.cfg
@@ -1,9 +1,11 @@
-//Wright-5000m - Wright Aeronautical: Fly an airplane to 5000m.
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a4
+	sortKey = a007
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -11,12 +13,12 @@ CONTRACT_TYPE
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-2500m
+
+		contractType = Start-002-FlyingHigher
 		minCount = 1
-		
+
 	}
-	
+
 
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
@@ -24,56 +26,83 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		
-		craft = GAPcraftWright5000m
-		
+
+		craft = KPlanesCraft_Start_007
+
 	}
-	
+
+	DATA
+	{
+		type = double
+		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+		ScaledAltMin = Round(@/AltMin / 1000.0)
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMin = " (Troposphere Low)"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
+		title = Range for altitude 
+	}
 
 //CONTRACT DESCRIPTION
 
-//Contract Descriptions
-	name = Wright-5000m
-	title = Fly an airplane to 5,000m.
-	group = GAP
+	name = Start-007-TroposphereLow
+	title = Format("#autoLOC_KPlanes_Start_007_TroposphereLow_title", [ "@/PrettyAltRange" ] )
+	group = KPlanes_Start
 	agent = Wright Aeronautical
-	
-	description = Orville Kerman says it should be possible now to attempt an altitude record of 5,000m in an air-breathing airplane. He said Wright Aeronautical is aware that a local newspaper is offering a reward to any organization that will be the first to achieve a 5,000m flying altitude, and he thinks your organization may be up to the task.
-	
-	synopsis = Simply launch an airplane from the runway, fly up to 5,000m, then land back at KSC safely.
-	
-	notes = Enjoy the view, as at this altitude things on the ground really start to look small!
-	
-	completedMessage = 5,000m and you didn't hit a bird! Great job!&br;&br;Unfortunatley, hitting a bird was what the last pilot to attempt this challenge said before he spiraled out of control from 4,500m and left a crater near the Administration Building.&br;&br;As Gene Kerman makes preparations to turn the crater into a memorial pond for aviation pioneers, both Orville Kerman and Inigma Kerman congratulate you on returning safely. Inigma says GAP has a challenge waiting for you back at Mission Control if you're interested.
+
+	description = Format("#autoLOC_KPlanes_Start_007_TroposphereLow_description", [ "@/PrettyAltRange" ] )
+
+	synopsis = Format("#autoLOC_KPlanes_Start_007_TroposphereLow_synopsis", [ "@/PrettyAltRange" ] )
+
+	notes = Format("#autoLOC_KPlanes_Start_007_TroposphereLow_notes", [ "@/PrettyAltRange" ] )
+
+	completedMessage = Format("#autoLOC_KPlanes_Start_007_TroposphereLow_completedMessage", [ "@/PrettyAltRange" ] )
 
 //Contract Limits
-  	maxCompletions = 1
-   	maxSimultaneous = 1
-//	weight = 10.0
+	maxCompletions = 1
+	maxSimultaneous = 1
+//	weight = 100.0
 
 	autoAccept = false
 	declinable = true
 	cancellable = true
-	
-	minExpiry = 7.0
-	maxExpiry = 7.0
+
+	minExpiry = 0.0
+	maxExpiry = 0.0
 	deadline = 0
- 
+
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 2000
-  	rewardFunds = 16000
-  	rewardReputation = 5.0
- 	rewardScience = 3.0
+	advanceFunds = 30 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 30 * @KPlanes:RewardFunds
+	rewardReputation = 5 * @KPlanes:RewardReputation
+	rewardScience = 3 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 4000.0
- 	failureReputation = 5.0
-	
-	
+	failureFunds = 30 * @KPlanes:FailureFunds
+	failureReputation = 5 * @KPlanes:FailureReputation
+
+
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //Craft definition
@@ -82,7 +111,7 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your aircraft must
-		
+
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
@@ -91,10 +120,10 @@ CONTRACT_TYPE
 			name = HasCrew
 			type = HasCrew
 			title = have a certified pilot
-			
+
 			trait = Pilot
 			minCrew = 1
-		
+
 			disableOnStateChange = false
 			hideChildren = true
 
@@ -105,20 +134,20 @@ CONTRACT_TYPE
 			name = PartValidation
 			type = PartValidation
 			title = have wings
-			
+
 			category = Aero
-			
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
-		
+
 		PARAMETER
 		{
 			name = All
 			type = All
 			title = have an air breathing engine only
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -130,16 +159,16 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = SolidBooster
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -151,51 +180,51 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = LiquidFuel
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any solid rocket fuel
-				
+
 				resource = SolidFuel				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any oxidizer
-				
+
 				resource = Oxidizer				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		disableOnStateChange = false
 
 	}
@@ -205,28 +234,28 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly up to 5,000m
-		
+		title = fly up to @/PrettyAltMin
+
 		vessel = @/craft
-		
+
 		PARAMETER
 		{
 			name = ReachState
 			type = ReachState
-			
-			targetBody = Kerbin
+
+			targetBody = HomeWorld()
 			situation = FLYING
-			minAltitude = 5000
+			minAltitude = @/AltMin
 
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = true
-			
+
 		}
-	
+
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = true	
+		hideChildren = true
 
 	}
 
@@ -236,7 +265,7 @@ CONTRACT_TYPE
 		name = Any
 		type = Any
 		title = and then land and stop
-		
+
 		PARAMETER
 		{
 			name = Any
@@ -248,15 +277,15 @@ CONTRACT_TYPE
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = the KSC Runway
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = Runway
 					situation = LANDED
 					maxSpeed = 0.0
@@ -270,21 +299,21 @@ CONTRACT_TYPE
 				hideChildren = true		
 
 			}
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = or the Spaceplane Hangar Air Terminal
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = SPH
 					situation = LANDED
 					maxSpeed = 0.0
@@ -293,16 +322,16 @@ CONTRACT_TYPE
 					hideChildren = true
 
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true		
 
 			}
-		
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = false
 
@@ -314,23 +343,23 @@ CONTRACT_TYPE
 		name = All
 		type = All
 		title = safely
-		
+
 		PARAMETER
 		{
 			name = VesselNotDestroyed
 			type = VesselNotDestroyed
 			title = without destroying your aircraft
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
-			
+
 			vessel = @/craft
 
 		}
@@ -338,6 +367,6 @@ CONTRACT_TYPE
 		completeInSequence = true
 		disableOnStateChange = true
 
-	}	
-	
+	}
+
 }
