--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -31,5 +31,11 @@ Localization
 		#autoLOC_KPlanes_Start_005_Helicopter_synopsis = For science (and a few funds)!
 		#autoLOC_KPlanes_Start_005_Helicopter_notes = Make a helicopter or VTOL and land on a VAB or Administration Building helipad!
 		#autoLOC_KPlanes_Start_005_Helicopter_completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
+
+		#autoLOC_KPlanes_Start_007_TroposphereLow_title = Fly an airplane to <<1>>.
+		#autoLOC_KPlanes_Start_007_TroposphereLow_description = Orville Kerman says it should be possible now to attempt an altitude record of <<1>> in an air-breathing airplane. He said Wright Aeronautical is aware that a local newspaper is offering a reward to any organization that will be the first to achieve a <<1>> flying altitude, and he thinks your organization may be up to the task.
+		#autoLOC_KPlanes_Start_007_TroposphereLow_synopsis = Simply launch an airplane from the runway, fly up to <<1>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_007_TroposphereLow_notes = Enjoy the view, as at this altitude things on the ground really start to look small!
+		#autoLOC_KPlanes_Start_007_TroposphereLow_completedMessage = <<1>> and you didn't hit a bird! Great job!\n\nUnfortunatley, hitting a bird was what the last pilot to attempt this challenge said before he spiraled out of control from just under <<1>> and left a crater near the Administration Building.\n\nAs Gene Kerman makes preparations to turn the crater into a memorial pond for aviation pioneers, both Orville Kerman and Inigma Kerman congratulate you on returning safely. There is a challenge waiting for you back at Mission Control if you're interested.
 	}
 }
