--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -2,36 +2,49 @@ Localization
 {
 	en-us
 	{
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_001_FirstFlight_title = Build and fly your first airplane!
 		#autoLOC_KPlanes_Start_001_FirstFlight_description = Thanks to your organization's research efforts, we have finally developed an air-breathing engine that should be light enough to mount to a glider, making controlled powered air flight possible!\n\nPrevious attempts to use solid rockets for gliders often ended in disaster and a scarcity of willing volunteers.  Wright Aeronautical is asking you to partner with them to build and test a flying machine using an air breathing engine. Your flying machine must have wings so it can control its flight, and must be able to land safely.\n\nThis is a whole new frontier where many have failed before, so there isn't any investment money available to offer you at the moment. Wright Aeronautical is willing to cover labor costs, snacks, and notify the press, however, you will need to put forth your own funds to acquire the parts necessary for this project. If you succeed, your pilot will acquire both valuable flying skills and your organization will become known worldwide.
 		#autoLOC_KPlanes_Start_001_FirstFlight_synopsis = It's time to construct a flying machine - one that will prove to the world that controlled powered air flight is indeed possible!
 		#autoLOC_KPlanes_Start_001_FirstFlight_notes = Wilbur and Orville both wanted to go, but the coin they flipped landed on its side - hence the reason why they're also asking you to put up a volunteer to pilot the contraption.
 		#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage = Congratulations! The flight was a success!\n\nThe historic flight was thankfully caught on camera by the lone press agent who responded to the press invitation. His article about your flight has been read by millions, and you have now spurred the imaginations of Kerbals everywhere.
 
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_002_FlyingHigher_title = Fly an airplane to an <<1>>.
 		#autoLOC_KPlanes_Start_002_FlyingHigher_description = Taking off and landing is easy. Flying at an <<1>> with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
 		#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis = Simply launch an airplane from the runway, fly to an <<1>>, then land back at the runway safely.
 		#autoLOC_KPlanes_Start_002_FlyingHigher_notes = Enjoy the view!
 		#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage = Another historic flight completed!\n\nYour pilot is starting to showing some amazing skill with that last landing.
 
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_003_FlyingFaster_title = Achieve an airspeed of <<2>>
 		#autoLOC_KPlanes_Start_003_FlyingFaster_description = Kurtis Kerman, a friend of Wilbur Kerman, suggests that an airplane, if designed properly, should be able to exceed speeds faster than the fastest ground vehicles, and without having to dive toward the ground to do it. Wright Aeronautical is interested in helping to prove that this is possible (we're hoping you know which "this" we're referring to). They want you to take an air-breathing airplane to an <<1>> and see if you can acheive a <<2>> safely in level controlled flight, and thus break the current manned vehicle speed record.
 		#autoLOC_KPlanes_Start_003_FlyingFaster_synopsis = Simply launch an airplane from the runway, flying at an <<1>>, with a <<2>> in level flight for 5 seconds, and then land back at KSC safely.	
 		#autoLOC_KPlanes_Start_003_FlyingFaster_notes = Let's get flying!
 		#autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage = Congratulations, you have set a new air speed record at a <<2>>!\n\nYou have justified Kurtis Kerman's theories on high speed air flight, and brought another measure of fame and reputation to Wright Aeronautical. Sponsors are starting to ask how they can support the new air speed frontier. Check in with Mission Control to see if Wright Aeronautical has another contract waiting for you!
 
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_004_Seaplane_description = Build and fly a seaplane!
 		#autoLOC_KPlanes_Start_004_Seaplane_description = You've proven the airworthiness of your aircraft so far. But can you modify it or design an aircraft that can land on water? We want you to attempt an aviation first - landing an airplane on water, and taking back off again. Our engineers would like to call such an idea a seaplane, and they think it will really be useful to a number of organizations at KSC if the idea can be proven.
 		#autoLOC_KPlanes_Start_004_Seaplane_synopsis = Land a seaplane on the surface of the water at the waypoint, and take off again and land back at KSC.
 		#autoLOC_KPlanes_Start_004_Seaplane_notes = Your craft must be an airplane that can land on water horizontally and take off again.
 		#autoLOC_KPlanes_Start_004_Seaplane_completedMessage = Congratulations on another aviation first! You have propelled your organization to one of the most popular organizations. We have credited your account with a share of funds from various investors who are excited about your organization's future.
 
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_005_Helicopter_title = Land on a helipad!
 		#autoLOC_KPlanes_Start_005_Helicopter_description = We want you to test your first helicopter or Vertical Take-Off and Landing (VTOL) prototype. Land on one of the available helipads.
 		#autoLOC_KPlanes_Start_005_Helicopter_synopsis = For science (and a few funds)!
 		#autoLOC_KPlanes_Start_005_Helicopter_notes = Make a helicopter or VTOL and land on a VAB or Administration Building helipad!
 		#autoLOC_KPlanes_Start_005_Helicopter_completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
 
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel a <<1>>
+		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel a <<1>> and return back to the KSC.
+		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel a <<1>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
+		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
+
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_007_TroposphereLow_title = Fly an airplane to <<1>>.
 		#autoLOC_KPlanes_Start_007_TroposphereLow_description = Orville Kerman says it should be possible now to attempt an altitude record of <<1>> in an air-breathing airplane. He said Wright Aeronautical is aware that a local newspaper is offering a reward to any organization that will be the first to achieve a <<1>> flying altitude, and he thinks your organization may be up to the task.
 		#autoLOC_KPlanes_Start_007_TroposphereLow_synopsis = Simply launch an airplane from the runway, fly up to <<1>>, then land back at KSC safely.
