Added distance data and formatting.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -42,20 +42,42 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		Distance = Round(@KPlanes:ShortHop * 1000.0)
+		ScaledDistance = Round(@/Distance / 1000.0)
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		DescDistance = " (Short Hop)"
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		PrettyDistance = "@/ScaledDistance.Print() km"
+		title = Distance
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-006-ShortHop
-	title = Format("#autoLOC_KPlanes_Start_006_ShortHop_title", [ "" ] )
+	title = Format("#autoLOC_KPlanes_Start_006_ShortHop_title", [ "@/PrettyDistance" ] )
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_006_ShortHop_description", [ "" ] )
+	description = Format("#autoLOC_KPlanes_Start_006_ShortHop_description", [ "@/PrettyDistance" ] )
 
-	synopsis = Format("#autoLOC_KPlanes_Start_006_ShortHop_synopsis", [ "" ] )
+	synopsis = Format("#autoLOC_KPlanes_Start_006_ShortHop_synopsis", [ "@/PrettyDistance" ] )
 
-	notes = Format("#autoLOC_KPlanes_Start_006_ShortHop_notes", [ "" ] )
+	notes = Format("#autoLOC_KPlanes_Start_006_ShortHop_notes", [ "@/PrettyDistance" ] )
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_006_ShortHop_completedMessage", [ "" ] )
+	completedMessage = Format("#autoLOC_KPlanes_Start_006_ShortHop_completedMessage", [ "@/PrettyDistance" ] )
 
 //Contract Limits
 	maxCompletions = 1
