Added first pass at distance contracts.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -67,17 +67,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-006-ShortHop
-	title = Format("#autoLOC_KPlanes_Start_006_ShortHop_title", [ "@/PrettyDistance" ] )
+	title = Format("#autoLOC_KPlanes_Start_006_ShortHop_title", [ "@/PrettyDistance", "@/DescDistance" ] )
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_006_ShortHop_description", [ "@/PrettyDistance" ] )
+	description = Format("#autoLOC_KPlanes_Start_006_ShortHop_description", [ "@/PrettyDistance", "@/DescDistance" ] )
 
-	synopsis = Format("#autoLOC_KPlanes_Start_006_ShortHop_synopsis", [ "@/PrettyDistance" ] )
+	synopsis = Format("#autoLOC_KPlanes_Start_006_ShortHop_synopsis", [ "@/PrettyDistance", "@/DescDistance" ] )
 
-	notes = Format("#autoLOC_KPlanes_Start_006_ShortHop_notes", [ "@/PrettyDistance" ] )
+	notes = Format("#autoLOC_KPlanes_Start_006_ShortHop_notes", [ "@/PrettyDistance", "@/DescDistance" ] )
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_006_ShortHop_completedMessage", [ "@/PrettyDistance" ] )
+	completedMessage = Format("#autoLOC_KPlanes_Start_006_ShortHop_completedMessage", [ "@/PrettyDistance", "@/DescDistance" ] )
 
 //Contract Limits
 	maxCompletions = 1
@@ -229,6 +229,147 @@ CONTRACT_TYPE
 
 		}
 
+		disableOnStateChange = false
+
+	}
+
+//Contract Behaviour (Distance Marker)
+BEHAVIOUR
+{
+    name = WaypointGenerator
+    type = WaypointGenerator
+
+    PQS_CITY
+    {
+        name = KSC
+
+        targetBody = HomeWorld()
+        hidden = false
+        count = 1
+        icon = ksc
+        pqsCity = KSC
+    }
+
+    RANDOM_WAYPOINT_NEAR
+    {
+        name = Distance Marker
+
+        targetBody = HomeWorld()
+        count = 1
+        icon = custom
+        altitude = 0.0
+        waterAllowed = true
+	    nearIndex = 0
+        minDistance = ShortHop
+        maxDistance = ShortHop
+    }
+}
+
+//Contract Goals
+	PARAMETER
+	{
+		name = VesselParameterGroup
+		type = VesselParameterGroup
+		title = fly to waypoint "Distance Marker" which is @/PrettyDistance@/DescDistance from KSC
+
+		vessel = @/craft
+
+		PARAMETER
+		{
+			name = VisitWaypoint
+			type = VisitWaypoint
+
+			index = 0
+			horizontalDistance = 500.0
+			hideOnCompletion = true
+			showMessages = true
+
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = true
+
+		}
+
+		completeInSequence = true
+		disableOnStateChange = true
+		hideChildren = true
+
+	}
+
+//Recovery Parameter - Landing
+	PARAMETER
+	{
+		name = Any
+		type = Any
+		title = and then land and stop
+
+		PARAMETER
+		{
+			name = Any
+			type = Any
+			title = at one of the following recovery areas
+
+			PARAMETER
+			{
+				name = VesselParameterGroup
+				type = VesselParameterGroup
+				title = the KSC Runway
+
+				vessel = @/craft
+
+			PARAMETER
+				{
+					name = ReachState
+					type = ReachState
+
+					targetBody = HomeWorld()
+					biome = Runway
+					situation = LANDED
+					maxSpeed = 0.0
+
+					disableOnStateChange = false
+					hideChildren = true
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true		
+
+			}
+
+			PARAMETER
+			{
+				name = VesselParameterGroup
+				type = VesselParameterGroup
+				title = or the Spaceplane Hangar Air Terminal
+
+				vessel = @/craft
+
+			PARAMETER
+				{
+					name = ReachState
+					type = ReachState
+
+					targetBody = HomeWorld()
+					biome = SPH
+					situation = LANDED
+					maxSpeed = 0.0
+
+					disableOnStateChange = false
+					hideChildren = true
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true		
+
+			}
+
+			disableOnStateChange = false
+
+		}
+
+		completeInSequence = true
 		disableOnStateChange = false
 
 	}
