--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -38,9 +38,9 @@ Localization
 		#autoLOC_KPlanes_Start_005_Helicopter_completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel a <<1>>
-		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel a <<1>> and return back to the KSC.
-		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel a <<1>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel a <<1>><<2>>
+		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel a <<1>><<2>> and return back to the KSC.
+		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
 		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
 
