Added missing loc.

--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -39,7 +39,7 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel a <<1>><<2>>
-		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel a <<1>><<2>> and return back to the KSC.
+		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the distance marker at <<1>><<2>> and return back to the KSC.
 		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
 		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
@@ -50,5 +50,41 @@ Localization
 		#autoLOC_KPlanes_Start_007_TroposphereLow_synopsis = Simply launch an airplane from the runway, fly up to <<1>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_007_TroposphereLow_notes = Enjoy the view, as at this altitude things on the ground really start to look small!
 		#autoLOC_KPlanes_Start_007_TroposphereLow_completedMessage = <<1>> and you didn't hit a bird! Great job!\n\nUnfortunatley, hitting a bird was what the last pilot to attempt this challenge said before he spiraled out of control from just under <<1>> and left a crater near the Administration Building.\n\nAs Gene Kerman makes preparations to turn the crater into a memorial pond for aviation pioneers, both Orville Kerman and Inigma Kerman congratulate you on returning safely. There is a challenge waiting for you back at Mission Control if you're interested.
+
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_008_DomesticDistance_title = Travel a <<1>><<2>>
+		#autoLOC_KPlanes_Start_008_DomesticDistance_description = Passengers want to go further, perhaps to the sea side or some other city. Travel to the distance marker at <<1>><<2>> and return to the KSC.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_notes = You're gonna need a bigger plane (and fuel tanks).
+		#autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage = Phew, that was a long way. Next time pack some entertainment, or perhaps look into autopilots.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_009_AirspeedRecord_title = Achieve an airspeed of <<2>>
+		#autoLOC_KPlanes_Start_009_AirspeedRecord_description = Kurtis Kerman, now a fellow engineer with Wright Aeronautical, thinks that with additional tweaking of existing aircraft design, that it may be possible to exceed <<2>> in level flight. A number of sponsors have given us some money to make it happen, and Inigma Kerman is more than happy to funnel all of it to Wright Aeronautical and on to your organization if you accept this contract!\n\nAttempting high speed flying though is not for the faint of heart. Some pilots have reported serious shimmies with their aircraft when approaching high speeds during dives, and some airplanes have broken up due to aerodynamic forces when exceeding <<2>>. Inigma wants you to be the first to take an air-breathing airplane to an <<1>> and exceed <<2>> in level controlled flight, and return safely. Doing so will give the sponsors a pretty decent return on their investment and funds in your pocket.
+		#autoLOC_KPlanes_Start_009_AirspeedRecord_synopsis = Simply launch an airplane from the runway, fly to an <<1>>, exceed <<2>> in level flight for 5 seconds, and then land back at KSC safely.
+		#autoLOC_KPlanes_Start_009_AirspeedRecord_notes = Let's get flying!
+		#autoLOC_KPlanes_Start_009_AirspeedRecord_completedMessage = Congratulations, you have set a new airspeed record of <<2>> and returned alive! There are more aircraft challenges waiting for you back at Mission Control if you're interested.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_title = Long haul flights to a <<1>><<2>>
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_description = Travelling across continents might be useful for flying back our intrepid astronauts, or for business people who simply have to be there. Travel to the distance marker at <<1>><<2>> and return to the KSC.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_notes = Fuel in wings? Fuel under wings? Drop fuel from wings? So much fuel!
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_completedMessage = So far! Definitely need to invest in in-flight entertainment systems.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_011_Mountaineer_title = Land on a mountain top!
+		#autoLOC_KPlanes_Start_011_Mountaineer_description = Landing on mountains may be useful for rescuing Kerbals who returned from space and landed in strange places. Alternatively we might find interesting views or creatures up there. Fly into the mountains and land at least <<1>> above sea level.
+		#autoLOC_KPlanes_Start_011_Mountaineer_synopsis = Fly to the mountains and land above <<1>>.
+		#autoLOC_KPlanes_Start_011_Mountaineer_notes = Probably better to use VTOL or helicopter, or perhaps parachutes?
+		#autoLOC_KPlanes_Start_011_Mountaineer_completedMessage = Well that was precarious!
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_title = Extreme long distance flights to a <<1>><<2>>
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_description = Holiday seem popular, but for some reason they are more appealing if they are on a different continent. The only problem is that these are quite far away. Having enough fuel and patience to last the distance will be challenge. Travel to the distance marker at <<1>><<2>> and return to the KSC.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_notes = Your plane may well be made entirely of fuel tanks. Bigger wings, bigger engines, bigger landing legs, bigger budgets.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 	}
 }
