Distance using LaunchSite waypoint.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
@@ -229,7 +229,7 @@ BEHAVIOUR
     name = WaypointGenerator
     type = WaypointGenerator
 
-    PQS_CITY
+    LAUNCH_SITE
     {
         name = KSC
 
@@ -237,7 +237,7 @@ BEHAVIOUR
         hidden = false
         count = 1
         icon = ksc
-        pqsCity = KSC
+        launchSite = KSC
     }
 
     RANDOM_WAYPOINT_NEAR
