Added Mountains contract.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
@@ -32,6 +32,28 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = double
+		AltMin = Round(1000.0 * 1000.0)
+		ScaledAltMin = Round(@/AltMin / 1000.0)
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMin = ""
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		title = Minimum altitude
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-011-Mountaineer
@@ -111,6 +133,23 @@ CONTRACT_TYPE
 
 			disableOnStateChange = false
 			hideChildren = true
+
+		}
+
+		PARAMETER
+		{
+			name = ReachState
+			type = ReachState
+
+			targetBody = HomeWorld()
+			biome = Mountains
+			minAltitude = 1000.0
+			situation = LANDED
+			maxSpeed = 0.0
+
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = true
 
 		}
 
