Start bug fixing from testing.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -239,15 +239,14 @@ BEHAVIOUR
     name = WaypointGenerator
     type = WaypointGenerator
 
-    LAUNCH_SITE
+    PQS_CITY
     {
         name = KSC
 
         targetBody = HomeWorld()
         hidden = false
-        count = 1
         icon = ksc
-        launchSite = KSC
+        pqsCity = KSC
     }
 
     RANDOM_WAYPOINT_NEAR
@@ -260,8 +259,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = ShortHop
-        maxDistance = ShortHop
+        minDistance = @/Distance
+        maxDistance = @/Distance
     }
 }
 
