--- a/GameData/ContractPacks/KPlanes/Groups/Start/012-IntercontinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/012-IntercontinentalDistance.cfg
@@ -229,15 +229,14 @@ BEHAVIOUR
     name = WaypointGenerator
     type = WaypointGenerator
 
-    LAUNCH_SITE
+    PQS_CITY
     {
         name = KSC
 
         targetBody = HomeWorld()
         hidden = false
-        count = 1
         icon = ksc
-        launchSite = KSC
+        pqsCity = KSC
     }
 
     RANDOM_WAYPOINT_NEAR
@@ -250,8 +249,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = Intercontinental
-        maxDistance = Intercontinental
+        minDistance = @/Distance
+        maxDistance = @/Distance
     }
 }
 
