Distances are in km, not m. Fix distance descriptions.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -84,6 +84,7 @@ CONTRACT_GROUP
 
 	DATA
 	{
+		// Altitude (km)
 		type = double
 		title = Altitude scaling
 		requiredValue = false
@@ -113,6 +114,7 @@ CONTRACT_GROUP
 
 	DATA
 	{
+		// Speed (m/s)
 		type = double
 		title = Speed scaling
 		requiredValue = false
@@ -129,6 +131,7 @@ CONTRACT_GROUP
 
 	DATA
 	{
+		// Distance (km)
 		type = double
 		title = Distance scaling
 		requiredValue = false
@@ -136,10 +139,10 @@ CONTRACT_GROUP
 		Circumference		= 2.0 * @PI * HomeWorld().Radius()	// (m) Homeworld circumference
 
 		// Identifiers
-		ShortHop		= Round(@Circumference / 75.0, 10.0)
-		Domestic		= Round(@Circumference / 40.0, 50.0)
-		Continental		= Round(@Circumference / 15.0, 100.0)
-		Intercontinental	= Round(@Circumference / 5.0,  250.0)
-		Polar			= Round(@Circumference / 2.0)
+		ShortHop		= Round(@Circumference / 75000.0, 10.0)
+		Domestic		= Round(@Circumference / 40000.0, 50.0)
+		Continental		= Round(@Circumference / 15000.0, 100.0)
+		Intercontinental	= Round(@Circumference / 5000.0,  250.0)
+		Polar			= Round(@Circumference / 2000.0)
 	}
 }
