--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -38,9 +38,9 @@ Localization
 		#autoLOC_KPlanes_Start_005_Helicopter_completedMessage = Flight Completed! And you're still alive, which is even better since most helicopter and other VTOL test flights have been fatal.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel a <<1>><<2>>
+		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel <<1>><<2>>
 		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the distance marker at <<1>><<2>> and return back to the KSC.
-		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
 		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
 
@@ -53,9 +53,9 @@ Localization
 
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Start_008_DomesticDistance_title = Travel a <<1>><<2>>
+		#autoLOC_KPlanes_Start_008_DomesticDistance_title = Travel <<1>><<2>>
 		#autoLOC_KPlanes_Start_008_DomesticDistance_description = Passengers want to go further, perhaps to the sea side or some other city. Travel to the distance marker at <<1>><<2>> and return to the KSC.
-		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_008_DomesticDistance_notes = You're gonna need a bigger plane (and fuel tanks).
 		#autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage = Phew, that was a long way. Next time pack some entertainment, or perhaps look into autopilots.
 
@@ -67,9 +67,9 @@ Localization
 		#autoLOC_KPlanes_Start_009_AirspeedRecord_completedMessage = Congratulations, you have set a new airspeed record of <<2>> and returned alive! There are more aircraft challenges waiting for you back at Mission Control if you're interested.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Start_010_ContinentalDistance_title = Long haul flights to a <<1>><<2>>
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_title = Long haul flights of <<1>><<2>>
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_description = Travelling across continents might be useful for flying back our intrepid astronauts, or for business people who simply have to be there. Travel to the distance marker at <<1>><<2>> and return to the KSC.
-		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_notes = Fuel in wings? Fuel under wings? Drop fuel from wings? So much fuel!
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_completedMessage = So far! Definitely need to invest in in-flight entertainment systems.
 
@@ -81,9 +81,9 @@ Localization
 		#autoLOC_KPlanes_Start_011_Mountaineer_completedMessage = Well that was precarious!
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_title = Extreme long distance flights to a <<1>><<2>>
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_title = Extreme long distance flights of <<1>><<2>>
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_description = Holiday seem popular, but for some reason they are more appealing if they are on a different continent. The only problem is that these are quite far away. Having enough fuel and patience to last the distance will be challenge. Travel to the distance marker at <<1>><<2>> and return to the KSC.
-		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel a <<1>><<2>>, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel <<1>><<2>>, then land back at KSC safely.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_notes = Your plane may well be made entirely of fuel tanks. Bigger wings, bigger engines, bigger landing legs, bigger budgets.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 	}
