--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -96,18 +96,16 @@ CONTRACT_GROUP
 
 		// Identifiers
 		// This is all rough, not based on reality
-		TroposphereLow		= Round(@FlyingHigh * 0.1000)
-		TroposphereHigh		= Round(@FlyingHigh * 0.1700)
-		StratosphereLow		= Round(@FlyingHigh * 0.2400)
-		StratosphereHigh	= Round(@FlyingHigh * 0.5000)
+		TroposphereLow		= Round(@FlyingHigh * 0.1389, 0.5)
+		TroposphereHigh		= Round(@FlyingHigh * 0.2778, 0.5)
+		StratosphereLow		= Round(@FlyingHigh * 0.4000, 0.5)
+		StratosphereHigh	= Round(@FlyingHigh * 0.7000, 0.5)
 		
 		MesosphereLow		= @FlyingHigh
-		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.3500) + @FlyingHigh
-		ThermosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.7000) + @FlyingHigh
-		ThermosphereHigh	= Round((@SpaceLow - @FlyingHigh) * 0.8500) + @FlyingHigh		
+		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.1944, 5.0) + @FlyingHigh
+		ThermosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.3990, 5.0) + @FlyingHigh
 
-		KarmlanLine		= @SpaceLow
-		SpaceLEO		= Round((@SpaceHigh - @SpaceLow) * 0.1265) + @SpaceLow
+		SpaceLEO		= Round((@SpaceHigh - @SpaceLow)  * 0.1265, 10.0) + @SpaceLow
 		SpaceMEO		= @SpaceHigh
 		// SpaceGEO		= <<Compute using Orbit Generator>>
 	}
