Distance KSC waypoint invisible. Target index is 1, not 0.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -244,7 +244,7 @@ BEHAVIOUR
         name = KSC
 
         targetBody = HomeWorld()
-        hidden = false
+        hidden = true
         icon = ksc
         pqsCity = KSC
     }
@@ -278,7 +278,7 @@ BEHAVIOUR
 			name = VisitWaypoint
 			type = VisitWaypoint
 
-			index = 0
+			index = 1
 			horizontalDistance = 500.0
 			hideOnCompletion = true
 			showMessages = true
