--- a/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
@@ -234,7 +234,7 @@ BEHAVIOUR
         name = KSC
 
         targetBody = HomeWorld()
-        hidden = false
+        hidden = true
         icon = ksc
         pqsCity = KSC
     }
@@ -268,7 +268,7 @@ BEHAVIOUR
 			name = VisitWaypoint
 			type = VisitWaypoint
 
-			index = 0
+			index = 1
 			horizontalDistance = 500.0
 			hideOnCompletion = true
 			showMessages = true
