Regen dist contracts.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
@@ -249,8 +249,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = @/Distance
-        maxDistance = @/Distance
+        minDistance = @/Distance / 2.0
+        maxDistance = @/Distance / 2.0
     }
 }
 
