--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -259,8 +259,8 @@ BEHAVIOUR
         altitude = 0.0
         waterAllowed = true
 	    nearIndex = 0
-        minDistance = @/Distance
-        maxDistance = @/Distance
+        minDistance = @/Distance / 2.0
+        maxDistance = @/Distance / 2.0
     }
 }
 
