Improve message formats.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -66,17 +66,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", [ "@/PrettyAltRange" ] )
+	title = #autoLOC_KPlanes_Start_002_FlyingHigher_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", [ "@/PrettyAltRange" ] )
+	description = #autoLOC_KPlanes_Start_002_FlyingHigher_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", [ "@/PrettyAltRange" ] )
+	synopsis = #autoLOC_KPlanes_Start_002_FlyingHigher_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_notes", [ "@/PrettyAltRange" ] )
+	notes = #autoLOC_KPlanes_Start_002_FlyingHigher_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage", [ "@/PrettyAltRange" ] )
+	completedMessage = #autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
