--- a/GameData/ContractPacks/KPlanes/Groups/Start/005-Helicopter.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/005-Helicopter.cfg
@@ -47,17 +47,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-005-Helicopter
-	title = Format("#autoLOC_KPlanes_Start_005_Helicopter_title", [ "" ] )
+	title = #autoLOC_KPlanes_Start_005_Helicopter_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_005_Helicopter_description", [ "" ] )
+	description = #autoLOC_KPlanes_Start_005_Helicopter_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_005_Helicopter_synopsis", [ "" ] )
+	synopsis = #autoLOC_KPlanes_Start_005_Helicopter_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_005_Helicopter_notes", [ "" ] )
+	notes = #autoLOC_KPlanes_Start_005_Helicopter_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_005_Helicopter_completedMessage", [ "" ] )
+	completedMessage = #autoLOC_KPlanes_Start_005_Helicopter_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
