--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -64,20 +64,27 @@ CONTRACT_TYPE
 		title = Distance
 	}
 
+	DATA
+	{
+		type = string
+		PrettyDistanceRange = distance of at least @/PrettyDistance@/DescDistance
+		title = Range for distance 
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-006-ShortHop
-	title = Format("#autoLOC_KPlanes_Start_006_ShortHop_title", [ "@/PrettyDistance", "@/DescDistance" ] )
+	title = #autoLOC_KPlanes_Start_006_ShortHop_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_006_ShortHop_description", [ "@/PrettyDistance", "@/DescDistance" ] )
+	description = #autoLOC_KPlanes_Start_006_ShortHop_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_006_ShortHop_synopsis", [ "@/PrettyDistance", "@/DescDistance" ] )
+	synopsis = #autoLOC_KPlanes_Start_006_ShortHop_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_006_ShortHop_notes", [ "@/PrettyDistance", "@/DescDistance" ] )
+	notes = #autoLOC_KPlanes_Start_006_ShortHop_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_006_ShortHop_completedMessage", [ "@/PrettyDistance", "@/DescDistance" ] )
+	completedMessage = #autoLOC_KPlanes_Start_006_ShortHop_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -269,7 +276,7 @@ BEHAVIOUR
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyDistance@/DescDistance from KSC
+		title = fly to waypoint "Distance Marker" which is @/PrettyDistance from KSC
 
 		vessel = @/craft
 
