--- a/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/007-TroposphereHigh.cfg
@@ -66,17 +66,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-007-TroposphereHigh
-	title = Format("#autoLOC_KPlanes_Start_007_TroposphereHigh_title", [ "@/PrettyAltRange" ] )
+	title = #autoLOC_KPlanes_Start_007_TroposphereHigh_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_007_TroposphereHigh_description", [ "@/PrettyAltRange" ] )
+	description = #autoLOC_KPlanes_Start_007_TroposphereHigh_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_007_TroposphereHigh_synopsis", [ "@/PrettyAltRange" ] )
+	synopsis = #autoLOC_KPlanes_Start_007_TroposphereHigh_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_007_TroposphereHigh_notes", [ "@/PrettyAltRange" ] )
+	notes = #autoLOC_KPlanes_Start_007_TroposphereHigh_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_007_TroposphereHigh_completedMessage", [ "@/PrettyAltRange" ] )
+	completedMessage = #autoLOC_KPlanes_Start_007_TroposphereHigh_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
