--- a/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
@@ -54,20 +54,27 @@ CONTRACT_TYPE
 		title = Distance
 	}
 
+	DATA
+	{
+		type = string
+		PrettyDistanceRange = distance of at least @/PrettyDistance@/DescDistance
+		title = Range for distance 
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-008-DomesticDistance
-	title = Format("#autoLOC_KPlanes_Start_008_DomesticDistance_title", [ "@/PrettyDistance", "@/DescDistance" ] )
+	title = #autoLOC_KPlanes_Start_008_DomesticDistance_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_008_DomesticDistance_description", [ "@/PrettyDistance", "@/DescDistance" ] )
+	description = #autoLOC_KPlanes_Start_008_DomesticDistance_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis", [ "@/PrettyDistance", "@/DescDistance" ] )
+	synopsis = #autoLOC_KPlanes_Start_008_DomesticDistance_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_008_DomesticDistance_notes", [ "@/PrettyDistance", "@/DescDistance" ] )
+	notes = #autoLOC_KPlanes_Start_008_DomesticDistance_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage", [ "@/PrettyDistance", "@/DescDistance" ] )
+	completedMessage = #autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -259,7 +266,7 @@ BEHAVIOUR
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyDistance@/DescDistance from KSC
+		title = fly to waypoint "Distance Marker" which is @/PrettyDistance from KSC
 
 		vessel = @/craft
 
