--- a/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/009-AirspeedRecord.cfg
@@ -107,20 +107,27 @@ CONTRACT_TYPE
 		title = Speed
 	}
 
+	DATA
+	{
+		type = string
+		PrettySpeedRange = speed of at least @/PrettySpeed@/DescSpeed
+		title = Range for speed 
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-009-AirspeedRecord
-	title = Format("#autoLOC_KPlanes_Start_009_AirspeedRecord_title", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	title = #autoLOC_KPlanes_Start_009_AirspeedRecord_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_009_AirspeedRecord_description", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	description = #autoLOC_KPlanes_Start_009_AirspeedRecord_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_009_AirspeedRecord_synopsis", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	synopsis = #autoLOC_KPlanes_Start_009_AirspeedRecord_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_009_AirspeedRecord_notes", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	notes = #autoLOC_KPlanes_Start_009_AirspeedRecord_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_009_AirspeedRecord_completedMessage", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	completedMessage = #autoLOC_KPlanes_Start_009_AirspeedRecord_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
