--- a/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/011-Mountaineer.cfg
@@ -35,7 +35,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMin = Round(1000.0 * 1000.0)
+		AltMin = Round(1 * 1000.0)
 		ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
@@ -54,20 +54,27 @@ CONTRACT_TYPE
 		title = Minimum altitude
 	}
 
+	DATA
+	{
+		type = string
+		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
+		title = Range for altitude 
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-011-Mountaineer
-	title = Format("#autoLOC_KPlanes_Start_011_Mountaineer_title", [ "" ] )
+	title = #autoLOC_KPlanes_Start_011_Mountaineer_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_011_Mountaineer_description", [ "" ] )
+	description = #autoLOC_KPlanes_Start_011_Mountaineer_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_011_Mountaineer_synopsis", [ "" ] )
+	synopsis = #autoLOC_KPlanes_Start_011_Mountaineer_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_011_Mountaineer_notes", [ "" ] )
+	notes = #autoLOC_KPlanes_Start_011_Mountaineer_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_011_Mountaineer_completedMessage", [ "" ] )
+	completedMessage = #autoLOC_KPlanes_Start_011_Mountaineer_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -143,7 +150,7 @@ CONTRACT_TYPE
 
 			targetBody = HomeWorld()
 			biome = Mountains
-			minAltitude = 1000.0
+			minAltitude = @/AltMin
 			situation = LANDED
 			maxSpeed = 0.0
 
