--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -98,17 +98,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = Format("#autoLOC_KPlanes_Start_001_FirstFlight_title", [ "" ] )
+	title = #autoLOC_KPlanes_Start_001_FirstFlight_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_001_FirstFlight_description", [ "" ] )
+	description = #autoLOC_KPlanes_Start_001_FirstFlight_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis", [ "" ] )
+	synopsis = #autoLOC_KPlanes_Start_001_FirstFlight_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_001_FirstFlight_notes", [ "" ] )
+	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage", [ "" ] )
+	completedMessage = #autoLOC_KPlanes_Start_001_FirstFlight_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
