--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -107,20 +107,27 @@ CONTRACT_TYPE
 		title = Speed
 	}
 
+	DATA
+	{
+		type = string
+		PrettySpeedRange = speed of at least @/PrettySpeed@/DescSpeed
+		title = Range for speed 
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-003-FlyingFaster
-	title = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_title", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	title = #autoLOC_KPlanes_Start_003_FlyingFaster_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_description", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	description = #autoLOC_KPlanes_Start_003_FlyingFaster_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_synopsis", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	synopsis = #autoLOC_KPlanes_Start_003_FlyingFaster_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_notes", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	notes = #autoLOC_KPlanes_Start_003_FlyingFaster_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	completedMessage = #autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
