--- a/GameData/ContractPacks/KPlanes/Groups/Start/004-Seaplane.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/004-Seaplane.cfg
@@ -47,17 +47,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-004-Seaplane
-	title = Format("#autoLOC_KPlanes_Start_004_Seaplane_title", [ "" ] )
+	title = #autoLOC_KPlanes_Start_004_Seaplane_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_004_Seaplane_description", [ "" ] )
+	description = #autoLOC_KPlanes_Start_004_Seaplane_description
 
-	synopsis = Format("#autoLOC_KPlanes_Start_004_Seaplane_synopsis", [ "" ] )
+	synopsis = #autoLOC_KPlanes_Start_004_Seaplane_synopsis
 
-	notes = Format("#autoLOC_KPlanes_Start_004_Seaplane_notes", [ "" ] )
+	notes = #autoLOC_KPlanes_Start_004_Seaplane_notes
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_004_Seaplane_completedMessage", [ "" ] )
+	completedMessage = #autoLOC_KPlanes_Start_004_Seaplane_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
